[metadata]
name = dj_docs
version = 0.2.4
package_data={'dj_docs': ['management/commands/hints/configuration.md', 'management/commands/hints/intro.md']},
author = Sreeshanth
author_email = sreeshanththekkedath8@gmail.com
maintainer = Sreeshanth
maintainer_email = sreeshanththekkedath8@gmail.com
description = django application for documentation
long_description = file:README.rst
long_description_content_type = text/x-rst
license = MIT
keywords = django docs, docs
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: